# syntacore-test-case

./: .gitignore  CMakeLists.txt  README.md  install.sh  sample_data
src/: app.hpp  main.cpp  tree.hpp
tests/: app_tests.hpp  tests_main.cpp  tree_tests.hpp
